Fixes A11y alerts, contrast errors

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 :root {
   --primary-orange: hsl(35, 77%, 62%);
-  --primary-red: hsl(5, 85%, 63%);
+  --primary-red: hsl(5, 98%, 46%);
   --dark-blue: hsl(240, 100%, 5%);
   --dark-gray-blue: hsl(236, 13%, 42%);
   --gray-blue: hsl(233, 8%, 79%);
@@ -69,7 +69,7 @@ header {
 
 nav ul {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   gap: 1rem;
 }
 
@@ -89,14 +89,14 @@ nav ul {
 
 .main-news__headline {
   grid-area: headline;
-  font-size: 3.25rem;
+  font-size: 3.75rem;
   line-height: 1;
   align-self: center;
 }
 
 .main-news__blurb {
   grid-area: blurb;
-  font-size: 15px;
+  font-size: 16px;
 }
 
 .main-news__blurb p {
@@ -106,7 +106,9 @@ nav ul {
 
 button {
   background-color: var(--primary-red);
-  color: var(--off-white);
+  color: white;
+  font-weight: 800;
+  font-size: inherit;
   letter-spacing: 2px;
   text-transform: uppercase;
   border: 0;
@@ -117,10 +119,12 @@ button {
   grid-area: latest;
   background-color: var(--dark-blue);
   color: var(--off-white);
-  padding: 2rem 1.55rem;
+  /* padding: 2rem 1.55rem; */
+  padding: 1.5rem 1.5rem 0 1.5rem;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  /* justify-content: space-between; */
+  /* justify-content: space-around; */
 }
 
 .latest-news h1 {
@@ -141,7 +145,11 @@ button {
 
 .latest-news-item {
   border-bottom: 1px solid var(--gray-blue);
-  padding: 1.5rem 0;
+  /* padding: 1.5rem 0; */
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .latest-news-item:last-of-type {
@@ -175,17 +183,18 @@ button {
   gap: 0.75rem;
 }
 
+/* .carousel-item__body p:first-child { */
 .carousel-item__body h2 {
-  font-size: 1.125rem;
-}
-
-.carousel-item__body p:first-child {
   font-size: 1.5rem;
-  color: var(--gray-blue);
+  color: var(--dark-gray-blue);
   font-weight: 800;
 }
 
-.carousel-item__body p:last-child {
+.carousel-item__body h3 {
+  font-size: 1.125rem;
+}
+
+.carousel-item__body p {
   line-height: 1.5;
 }
 
@@ -194,7 +203,7 @@ button {
 }
 
 .fm-byline {
-  font-size: 0.75rem;
+  font-size: 0.7rem;
   letter-spacing: 1px;
   line-height: 1.5;
   text-align: center;
